Issue #3443835 by Gauravvvv, aronm, m4olivei, finnsky, dalin, javi-er: 'Help' tooltip is obstructed behind the navigation toolbar border

--- a/core/modules/navigation/css/components/toolbar-popover.css
+++ b/core/modules/navigation/css/components/toolbar-popover.css
@@ -60,7 +60,7 @@
     filter: drop-shadow(0 0 4.5rem rgba(0, 0, 0, 0.2)) drop-shadow(0 0 0.5rem rgba(0, 0, 0, 0.04)) drop-shadow(0 0 2.5rem rgba(0, 0, 0, 0.06));
     inline-size: var(--admin-toolbar-popover-width);
     inset-block-start: 0;
-    inset-inline-start: 0;
+    inset-inline-start: 1px;
   }
 }
 [data-toolbar-popover-safe-triangle] {
